# beach-bum

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
assets/fonts/: README.txt
assets/mp3s/: README.txt
etc/: animation_config.json  camera_config.json  level_config.json  player_config.json  run_config.json
src/: Animator.cpp  Animator.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Level.cpp  Level.h  Player.cpp  Player.h  Texture.cpp  Texture.h  main.cpp  utils.cpp  utils.h
